# gitBridge

./: .gitignore  .pre-commit-config.yaml  .snyk  CONTRIBUTING.md  LICENSE  Makefile  PYPI_PUBLISHING.md  README.md  SECURITY.md  codecov.yml  config.example.yaml  mkdocs.yml  pyproject.toml  requirements.txt  run.py  run_windows.py  versions.json
.github/workflows/: ci.yml  docs.yml  mypy.yml  publish.yml  ruff-format.yml  ruff-lint.yml
docs/: changelog.md  index.md  license.md
docs/api/: index.md
docs/architecture/: index.md  overview.md
docs/cli/: index.md  status-command.md  sync-command.md
docs/getting-started/: configuration-basics.md  first-sync.md  index.md  installation.md  quick-start.md
docs/images/: gitbridge-branding.html
docs/overrides/: .gitkeep
docs/stylesheets/: extra.css
docs/troubleshooting/: authentication-errors.md  browser-automation.md  common-issues.md  index.md  network-errors.md  proxy-issues.md  ssl-errors.md
docs/user-guide/: authentication.md  branch-management.md  configuration.md  corporate-setup.md  incremental-sync.md  index.md  proxy-configuration.md  ssl-certificates.md  sync-methods.md
gitbridge/: AGENTS.md  config.py  exceptions.py  progress_tracker.py  repository_manager.py  utils.py
gitsync/: AGENTS.md  __init__.py  api_client.py  api_sync.py  browser_sync.py  cert_support.py  cli.py  config.py  exceptions.py  file_synchronizer.py  interfaces.py  pac_support.py  progress_tracker.py  repository_manager.py  session_factory.py  utils.py
src/gitbridge/: browser_sync.py  cli.py  exceptions.py
tests/: README.md  __init__.py  conftest.py  platform_utils.py  test_api_client.py  test_api_sync.py  test_api_sync_refactored.py  test_browser_sync.py  test_cert_support.py  test_cli.py  test_config.py  test_exceptions.py  test_file_synchronizer.py  test_pac_support.py  test_platform_integration.py  test_progress_tracker.py  test_repository_manager.py  test_security.py  test_session_factory.py  test_utils.py
