[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitsync"
version = "0.4.1b1"
description = "Synchronize GitHub repositories when git access is blocked"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nevedomski Sergei", email = "info@nevedomski.us"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "certifi>=2023.0.0",
]

[project.urls]
Homepage = "https://nevedomski.github.io/gitSync/"
Documentation = "https://nevedomski.github.io/gitSync/"
Repository = "https://github.com/nevedomski/gitSync"
Issues = "https://github.com/nevedomski/gitSync/issues"
Changelog = "https://nevedomski.github.io/gitSync/changelog.html"

[project.scripts]
gitsync = "gitsync.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0",
    "types-tqdm>=4.66.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.3.0",
    "pymdown-extensions>=10.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocstrings[python]>=0.24.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
]
windows = [
    "pypac>=0.16.0; sys_platform == 'win32'",
    "wincertstore>=0.2.0; sys_platform == 'win32'",
    "pywin32>=300; sys_platform == 'win32'",
]
# Combine all optional dependencies
all = [
    "gitsync[dev]",
    "gitsync[docs]",
    "gitsync[windows]",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
# Python version to type check against
python_version = "3.11"

# Enable strict type checking mode
strict = true

# Additional strict checks
warn_return_any = true        # Warn about functions that return Any
warn_unused_configs = true    # Warn about unused [mypy-*] sections
no_implicit_reexport = true   # Require explicit re-exports

# Files to check
files = ["gitsync/"]

# Windows-specific modules that are only available on Windows
# We need to ignore these since they're platform-specific built-in modules
[[tool.mypy.overrides]]
module = "winreg"
ignore_missing_imports = true

# Optional Windows-only dependencies that may not be installed
# These are only used when running on Windows with the [windows] extra
[[tool.mypy.overrides]]
module = [
    "pypac",             # PAC proxy auto-configuration (Windows-only)
    "pypac.*",           # All pypac submodules
    "wincertstore",      # Windows certificate store access (Windows-only)
]
ignore_missing_imports = true

# Third-party libraries without type stubs
# Playwright doesn't provide type stubs, but is a core dependency
[[tool.mypy.overrides]]
module = [
    "playwright",        # Browser automation - no type stubs available
    "playwright.*",      # All playwright submodules
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=gitsync --cov-report=term-missing"
markers = [
    "windows: marks tests as requiring Windows platform (deselect with '-m \"not windows\"')",
    "linux: marks tests as requiring Linux platform (deselect with '-m \"not linux\"')",
    "macos: marks tests as requiring macOS platform (deselect with '-m \"not macos\"')", 
    "platform_specific: marks tests that are platform-specific",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.coverage.run]
source = ["gitsync"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
